# postgrag

./: pyproject.toml
src/: client.py  rag_lib.py
src/postgrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
