[project]
name = "postgrag"
version = "0.1.0"
description = "Retrieval Augmented Generation App based on PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "unstructured[all-docs]>=0.18.11",
]
